test/type-error-5.ktn
// TODO(strager): Improve error reporting.

define myAddVector<a> ([a] [a] -> [a]): kitten_intrinsic_addVector

define bar<a> ([a] [char] -> int):
  ->x; [x] myAddVector
